<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.mylp.MainActivity" >

    <item
        android:id="@+id/vip"
        android:orderInCategory="50"
        android:title="@string/vip"
        app:showAsAction="never"/>
    <item
        android:id="@+id/about"
        android:orderInCategory="50"
        android:title="@string/action_settings"
        app:showAsAction="never"/>
     <item
        android:id="@+id/help"
        android:orderInCategory="50"
        android:title="@string/help"
        app:showAsAction="never"/>
      <item
        android:id="@+id/exit"
        android:orderInCategory="50"
        android:title="@string/exit"
        app:showAsAction="never"/>
   

</menu>
