<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/prompt1"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.mylp.ao" >

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="56dp"
        android:layout_marginRight="44dp"
        android:background="@drawable/ca_1"
        android:text="使用罗盘" 
        android:textSize="10dp" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button2"
        android:layout_alignBottom="@+id/button2"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="51dp"
        android:background="@drawable/ca_1"
        android:text="点击返回"
        android:textSize="10dp" /><LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content">

            <Button android:id="@+id/button3" android:layout_width="wrap_content" android:layout_weight="1" android:layout_height="wrap_content" android:background="@drawable/ca_1" android:layout_marginBottom="22dp" android:text="00" android:alpha="0" />

            <Button android:id="@+id/btnUpdate" android:layout_width="wrap_content" android:layout_weight="1" android:layout_height="wrap_content" android:background="@drawable/ca_1" android:alpha="0" android:text="Button" />

            <Button android:id="@+id/button5" android:layout_width="wrap_content" android:layout_weight="1" android:layout_height="wrap_content" android:background="@drawable/ca_1" android:text="00" android:alpha="0" />

        </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="120dp"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/bug" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/buu" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/buq" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/buc" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/buo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/bua" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1" >

                <ImageView
                    android:id="@+id/ImageView02"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/sm"
                    android:alpha="0" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1" >

                <ImageView
                    android:id="@+id/ImageView01"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/sm" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1" >

                <ImageView
                    android:id="@+id/imageView1"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/sm"
                    android:alpha="0" />

            </FrameLayout>

        </LinearLayout>

    </LinearLayout>

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/button1"
        android:layout_alignLeft="@+id/button1"
        android:layout_marginBottom="19dp"
        android:layout_marginLeft="25dp" >
    </FrameLayout>

</RelativeLayout>